--- a/src/pug/sections/index-page/about-slider.pug
+++ b/src/pug/sections/index-page/about-slider.pug
@@ -2,7 +2,7 @@ extends ../../layouts/base-section/base-section.pug
 include ../../components/links/main-link
 
 block variables
-  - sectionClass = "about-list"
+  - sectionClass = "about-list lw-separator"
   - sectionTitle = 'Другие <span>услуги</span>' 
 
 block content
