--- a/src/pug/sections/index-page/about.pug
+++ b/src/pug/sections/index-page/about.pug
@@ -2,7 +2,7 @@ extends ../../layouts/base-section/base-section.pug
 include ../../components/main-btn/main-btn
 
 block variables
-  - sectionClass = "about"
+  - sectionClass = "about lw-separator"
   - sectionTitle = 'Что мы <span>делаем</span>'
   - sectionText = 'Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem eaque dignissimos vel eius repellat consequatur, minima atque a eum voluptates accusantium quas dicta et nostrum ratione. Ex iusto labore optio!'
 
