--- a/src/pug/sections/index-page/features.pug
+++ b/src/pug/sections/index-page/features.pug
@@ -1,7 +1,7 @@
 extends ../../layouts/base-section/base-section.pug
 
 block variables
-  - sectionClass = "features"
+  - sectionClass = "features lw-separator"
   - sectionTitle = 'Наши <span>преимущества</span>'
 
 block content
