--- a/src/pug/sections/index-page/hero.pug
+++ b/src/pug/sections/index-page/hero.pug
@@ -1,7 +1,7 @@
 include ../../components/main-btn/main-btn
 include ../../components/links/main-link
 
-section.page-top-section.hero.base-section
+section.page-top-section.hero.base-section.lw-separator
   .container
     h1.main-title Создание и продвижение сайтов <span>под ключ</span>
 
