--- a/src/pug/sections/index-page/portfolio.pug
+++ b/src/pug/sections/index-page/portfolio.pug
@@ -2,7 +2,7 @@ extends ../../layouts/base-section/base-section.pug
 include ../../components/links/main-link
 
 block variables
-  - sectionClass = "portfolio"
+  - sectionClass = "portfolio lw-separator"
   - sectionTitle = 'Разработанные <span>Проекты</span>' 
 
 block content
