--- a/src/pug/sections/index-page/questions.pug
+++ b/src/pug/sections/index-page/questions.pug
@@ -2,7 +2,7 @@ extends ../../layouts/base-section/base-section.pug
 include ../../components/main-btn/main-btn
 
 block variables
-  - sectionClass = "questions"
+  - sectionClass = "questions lw-separator"
   - sectionTitle = 'Ответы на частые <span>вопросы</span>'
 
 block content
