--- a/src/pug/sections/index-page/reviews.pug
+++ b/src/pug/sections/index-page/reviews.pug
@@ -2,7 +2,7 @@ extends ../../layouts/base-section/base-section.pug
 include ../../components/main-btn/main-btn
 
 block variables
-  - sectionClass = "reviews"
+  - sectionClass = "reviews lw-separator"
   - sectionTitle = 'Отзывы наших <span>клиентов</span>'
 
 block content
