--- a/src/pug/sections/index-page/team-slider.pug
+++ b/src/pug/sections/index-page/team-slider.pug
@@ -2,7 +2,7 @@ extends ../../layouts/base-section/base-section.pug
 include ../../components/links/main-link
 
 block variables
-  - sectionClass = "team-list"
+  - sectionClass = "team-list lw-separator"
   - sectionTitle = 'Кто будет работать <span>над проектом</span>' 
 
 block content
