--- a/src/pug/sections/index-page/workflow.pug
+++ b/src/pug/sections/index-page/workflow.pug
@@ -2,7 +2,7 @@ extends ../../layouts/base-section/base-section.pug
 include ../../components/main-btn/main-btn
 
 block variables
-  - sectionClass = "workflow"
+  - sectionClass = "workflow lw-separator"
   - sectionTitle = 'Как происходит рабочий <span>процесс</span>'
 
 block content
