--- a/src/pug/components/sliders/team-slider/_team-slider.scss
+++ b/src/pug/components/sliders/team-slider/_team-slider.scss
@@ -15,7 +15,7 @@
     align-items: center;
     justify-content: space-between;
     gap: var(--gap-xl);
-    padding: var(--gap-m) 0;
+    padding-top: var(--gap-m);
   }
 
   .swiper-pagination {
