--- a/src/pug/layouts/base-section/_base-section.scss
+++ b/src/pug/layouts/base-section/_base-section.scss
@@ -15,12 +15,12 @@
   .main-btn {
     grid-column: 1/2;
     max-height: 40px;
-    margin-top: 0;
+    // margin-top: 0;
 
     @include media-down($desktop-width) {
       grid-column: auto;
       order: 3;
-      margin-top: var(--gap-xl);
+      margin-top: var(--gap-m);
     }
   }
 
