--- a/src/pug/components/cards/info-card/_info-card.scss
+++ b/src/pug/components/cards/info-card/_info-card.scss
@@ -17,6 +17,38 @@ $border-radius: 10px;
 
     gap: var(--gap-s);
     height: 100%;
+
+    &-list {
+      margin: 8px 0 0 0;
+
+      ul {
+        margin: 0;
+        list-style: none;
+      }
+
+      ul li {
+        position: relative;
+        border: none;
+        box-shadow: none;
+        padding: 0;
+        margin-bottom: 10px;
+        text-wrap: auto;
+
+        &::before {
+          content: '';
+          position: absolute;
+          left: -20px;
+          top: 50%;
+          transform: translateY(-50%);
+          width: 10px;
+          height: 10px;
+          background-color: var(
+            --primary
+          ); /* синий маркер — можно подправить */
+          border-radius: 50%;
+        }
+      }
+    }
   }
 
   &-icon {
