Правки по ТЗ Ульяны

--- a/src/pug/components/accordeons/main-accordeon/_main-accordeon.scss
+++ b/src/pug/components/accordeons/main-accordeon/_main-accordeon.scss
@@ -18,6 +18,7 @@
       margin: calc(-1 * var(--gap-s));
       padding: var(--gap-s);
       padding-right: var(--gap-xl);
+      font-weight: 700;
 
       &::after {
         position: absolute;
