--- a/src/pug/components/cards/portfolio-card/_portfolio-card.scss
+++ b/src/pug/components/cards/portfolio-card/_portfolio-card.scss
@@ -25,6 +25,7 @@
     font-size: 16px;
     font-weight: var(--fw-l);
     color: var(--primary);
+    text-transform: uppercase;
 
     span {
       color: var(--primary);
