--- a/src/pug/modals/callback-modal.pug
+++ b/src/pug/modals/callback-modal.pug
@@ -4,7 +4,7 @@ block variables
   - modalId = "callback"
 
 block modalContent
-  span.modal-title Заполните форму и мы обязательно свяжемся с Вами
+  span.modal-title Заполните форму и мы обязательно <span>свяжемся с Вами</span>
 
   include ../components/forms/callback-form/callback-form
 
