--- a/src/pug/modals/_modal.scss
+++ b/src/pug/modals/_modal.scss
@@ -24,6 +24,10 @@
   padding-left: 0;
 
   &-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
     background-color: var(--dark);
     padding: clamp(var(--gap-s), 3vw, var(--gap-xl));
     border-radius: 4px;
@@ -66,20 +70,37 @@
 
   &-title {
     display: inline-block;
-    font-size: var(--fs-sm);
+    font-size: 24px;
     font-weight: var(--fw-l);
     width: 100%;
     padding-right: 20px;
     color: var(--white);
-    margin-bottom: var(--gap-l);
+    margin-bottom: var(--gap-r);
     text-wrap: initial;
+    text-transform: uppercase;
+    text-align: center;
+    font-family: 'Furore';
+    line-height: 1.2;
+
+    span {
+      color: var(--main-title-color);
+    }
   }
 
   &-text {
     font-size: 14px;
   }
 }
-
+.success-modal {
+  svg {
+    fill: var(--primary);
+  }
+}
+.error-modal {
+  svg {
+    fill: var(--danger);
+  }
+}
 .project-modal {
   max-width: 1100px;
   // height: 100vh;
